# ros-gst-bridge

gst_bridge/: CMakeLists.txt  register_plugin.dsv.in
gst_bridge/include/gst_bridge/: gst_bridge.h  rosbasesink.h  rosbasesrc.h  rosimagesrc.h
gst_bridge/src/: gst_bridge.cpp  rosbaseiface.cpp  rosbasesrc.cpp  rosimagesink.cpp  rosimagesrc.cpp
gst_pipeline_plugins/: CMakeLists.txt
gst_pipeline_plugins_webrtc/: package.xml
